src/test/ui/consts/match_ice.stderr
error[E0004]: non-exhaustive patterns: `&S` not covered
  --> $DIR/match_ice.rs:7:11
   |
LL |     match C {
   |           ^ pattern `&S` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
